--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -46,7 +46,7 @@ $table-font-size: 0.9rem;
 
 // masthead
 $masthead-background: $secondary-color;
-$masthead-font-color: $body-background;
+$masthead-font-color: $ebi-colour-light;
 
 // Set foundation colours
 $foundation-palette: (
