--- a/css/ebi-lite.css
+++ b/css/ebi-lite.css
@@ -1317,7 +1317,7 @@ i {
 
 strong,
 b {
-  font-weight: 700;
+  font-weight: 500;
   line-height: inherit; }
 
 small {
@@ -1439,7 +1439,7 @@ dl {
   margin-bottom: 1rem; }
   dl dt {
     margin-bottom: 0.3rem;
-    font-weight: 700; }
+    font-weight: 500; }
 
 blockquote {
   margin: 0 0 1rem;
@@ -1923,12 +1923,23 @@ select {
   -moz-appearance: none;
   -webkit-appearance: none; }
 
-body h1, body h2, body h3, body h4, body h5 {
-  font-weight: 300;
-  letter-spacing: -.5px; }
-
 li {
   word-wrap: break-word; }
+
+h1 {
+  font-weight: 300; }
+
+h2 {
+  font-weight: 400; }
+
+h3 {
+  font-weight: 400; }
+
+h4 {
+  font-weight: 400; }
+
+h5 {
+  font-weight: 400; }
 
 a,
 a:visited {
@@ -2525,7 +2536,7 @@ ul li.badge {
   border-bottom: none; }
 
 .masthead #local-title .columns a {
-  border-bottom: 1px dotted white; }
+  border-bottom: 1px dotted #f8f8f8; }
 
 .masthead #local-title .columns a.button,
 .masthead #local-title .columns a:hover {
@@ -2678,7 +2689,7 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
   .masthead h4,
   .masthead p,
   .masthead a, .masthead a:hover, .masthead a:focus, .masthead a:active, .masthead a:visited {
-    color: white; }
+    color: #f8f8f8; }
   .masthead ul li a {
     border-bottom: 0; }
   .masthead ul li.is-active a,
@@ -2692,13 +2703,13 @@ body.no-global-search .masthead-black-bar ul#global-nav.menu li.search {
   .masthead ul li.active-trail a,
   .masthead ul li.active a:visited,
   .masthead ul li.active-trail a:visited {
-    background-color: #222;
+    background-color: #f8f8f8;
     color: #555;
     border-bottom: 0; }
   .masthead nav {
     clear: both; }
   .masthead nav ul.menu li {
-    border-right: 1px solid white;
+    border-right: 1px solid #f8f8f8;
     float: left;
     margin-left: 0;
     /* compliance compatibility */ }
