--- a/css/ebi-css-build/_ebi_base_styles.scss
+++ b/css/ebi-css-build/_ebi_base_styles.scss
@@ -6,7 +6,7 @@
   h3 { font-weight: $global-weight-h3; }
   h4 { font-weight: $global-weight-h4; }
   h5 { font-weight: $global-weight-h5; }
-  
+
   a,
   a:visited {
     border-bottom-width: 1px;
@@ -22,6 +22,7 @@
     border-bottom-width: 3px;
     padding: 0.1em 0.3em;
   }
+  a:focus { box-shadow: 0 0 2px rgba(100,100,100,.5); }
   a:hover { opacity: .9; }
   a.image,
   a.image:visited { border-bottom: 0 none; }
