Iterate on black bar facets

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 <script defer="defer" src="{{ site.baseurl }}/js/script.js"></script>
 
 <!-- The Foundation theme JavaScript -->
-<script src="libraries/foundation-6/js/foundation.js"></script>
+<script src="{{ site.baseurl }}/libraries/foundation-6/js/foundation.js"></script>
 <script src="{{ site.baseurl }}/js/foundationExtendEBI.js"></script>
 <!-- <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/libraries/foundation-6/js/foundation.js"></script> -->
 <!-- <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/js/foundationExtendEBI.js"></script> -->
