--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,13 +10,21 @@
   <meta name="theme-color" content="#70BDBD"> <!-- Android Chrome mobile browser tab color -->
 
   <!-- Add information on the life cycle of this page -->
-  <meta name="ebi:owner" content="John Doe"> <!-- Who should be contacted about changes -->
-  <meta name="ebi:review-cycle" content="30"> <!-- In days, how often should the content be reviewed -->
-  <meta name="ebi:last-review" content="2015-12-20"> <!-- The last time the content was reviewed -->
-  <meta name="ebi:expiry" content="2016-01-20"> <!-- When this content is no longer relevant -->
+  <meta name="ebi:owner" content="EMBL-EBI Web Development"> <!-- Who should be contacted about changes -->
+  <meta name="ebi:review-cycle" content="180"> <!-- In days, how often should the content be reviewed -->
+  <meta name="ebi:last-review" content="2017-12-20"> <!-- The last time the content was reviewed -->
+  <meta name="ebi:expiry" content="2018-06-20"> <!-- When this content is no longer relevant -->
+
+  <!-- For the EMBL global nav (optional)  -->
+  <meta name="embl:rational" content="{{page.embl_rational}}" />
+  <meta name="embl:external" content="{{page.embl_external}}" />
+  <meta name="embl:active" content="{{page.embl_active}}" />
+  <meta name="embl:parent-1" content="{{page.embl_parent_1}}" />
+  <meta name="embl:parent-2" content="{{page.embl_parent_2}}" />
 
   <!-- If you link to any other sites frequently, consider optimising performance with a DNS prefetch -->
-  <link rel="dns-prefetch" href="//ebi.ac.uk" />
+  <link rel="dns-prefetch" href="https://ebi.ac.uk" />
+  <link rel="dns-prefetch" href="https://ebi.emblstatic.net" />
 
   <!-- If you have custom icon, replace these as appropriate.
        You can generate them at realfavicongenerator.net -->
