--- a/css/ebi-css-build/_ebi_theme_settings.scss
+++ b/css/ebi-css-build/_ebi_theme_settings.scss
@@ -38,7 +38,7 @@ $body-background: $ebi-colour-white;
 // typography
 $body-antialiased: true;
 $body-font-color: $ebi-colour-dark;
-$body-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$body-font-family: Helvetica, Arial, FreeSans, 'Liberation Sans', sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
 $code-font-family: Consolas, 'Liberation Mono', Courier, monospace;
 $table-font-family: $code-font-family;
