--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -1321,7 +1321,7 @@ i {
 
 strong,
 b {
-  font-weight: 500;
+  font-weight: 600;
   line-height: inherit; }
 
 small {
@@ -1443,7 +1443,7 @@ dl {
   margin-bottom: 1rem; }
   dl dt {
     margin-bottom: 0.3rem;
-    font-weight: 500; }
+    font-weight: 600; }
 
 blockquote {
   margin: 0 0 1rem;
@@ -1810,7 +1810,7 @@ select {
   margin-top: -0.5rem;
   margin-bottom: 1rem;
   font-size: 0.75rem;
-  font-weight: 500;
+  font-weight: 600;
   color: #ec5840; }
   .form-error.is-visible {
     display: block; }
@@ -3825,7 +3825,7 @@ table {
     background-color: #fefefe; }
   table caption {
     padding: 0.5rem 0.625rem 0.625rem;
-    font-weight: 500; }
+    font-weight: 600; }
   table thead {
     background: #f8f8f8;
     color: #222; }
@@ -3840,7 +3840,7 @@ table {
   table tfoot th,
   table tfoot td {
     padding: 0.5rem 0.625rem 0.625rem;
-    font-weight: 500;
+    font-weight: 600;
     text-align: left; }
   table tbody th,
   table tbody td {
@@ -3994,7 +3994,7 @@ a.thumbnail {
   position: relative;
   display: inline-block;
   border-bottom: dotted 1px #8a8a8a;
-  font-weight: 500;
+  font-weight: 600;
   cursor: help; }
 
 .tooltip {
@@ -5392,7 +5392,7 @@ input.clearable::-ms-clear {
   height: 0; }
 
 table {
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif;
   font-size: 1rem; }
 
 body.table-layout table {
