Remove Helv Neue references
For
https://github.com/ebiwd/EBI-Icon-fonts/issues/8#issuecomment-357188416

--- a/libraries/Choices/assets/styles/scss/base.scss
+++ b/libraries/Choices/assets/styles/scss/base.scss
@@ -29,7 +29,7 @@ html, body {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif;
   font-size: 16px;
   line-height: 1.4;
   color: #FFFFFF;
