--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -11,6 +11,8 @@ $ebi-colour-gold: rgb(233,180,0);
 $ebi-colour-orange: rgb(251,106,42);
 $ebi-colour-blue: rgb(0,134,180);
 $ebi-colour-white: rgb(255,255,255);
+$black: #0a0a0a;
+$white: #fefefe;
 
 $primary-color: $ebi-colour-petrol;
 $secondary-color: $ebi-colour-dark-grey;
