--- a/css/ebi-global-includes/_ebi_theme_settings.scss
+++ b/css/ebi-global-includes/_ebi_theme_settings.scss
@@ -34,7 +34,7 @@ $white: $ebi-colour-white;
 
 $body-background: $ebi-colour-white;
 $body-font-color: $ebi-colour-dark;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: Helvetica, Arial, FreeSans, "Liberation Sans", sans-serif;
 $body-font-family-serif: 'EB Garamond', 'georgia', serif;
 
 // Label tweaks
