--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,14 +17,14 @@
 -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- Your custom JavaScript file scan go here... change names accordingly -->
-<!-- <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/js/script.js"></script> -->
+<!-- <script defer="defer" src="//ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.2/js/script.js"></script> -->
 <script defer="defer" src="{{ site.baseurl }}/js/script.js"></script>
 
 <!-- The Foundation theme JavaScript -->
 <script src="{{ site.baseurl }}/libraries/foundation-6/js/foundation.js"></script>
 <script src="{{ site.baseurl }}/js/foundationExtendEBI.js"></script>
-<!-- <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/libraries/foundation-6/js/foundation.js"></script> -->
-<!-- <script src="//www.ebi.ac.uk/web_guidelines/EBI-Framework/v1.2/js/foundationExtendEBI.js"></script> -->
+<!-- <script src="//ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.2/libraries/foundation-6/js/foundation.js"></script> -->
+<!-- <script src="//ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.2/js/foundationExtendEBI.js"></script> -->
 <script type="text/JavaScript">$(document).foundation();</script>
 <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
 
