--- a/css/ebi-css-build/_ebi_base_styles.scss
+++ b/css/ebi-css-build/_ebi_base_styles.scss
@@ -88,12 +88,41 @@
 
   // image tweaks
   body .thumbnail { box-shadow: none; }
+
+  // captions as a legacy class and figure > figcaption
   .caption {
-    line-height: 1.3em;
-    font-family: sans-serif;
-    font-size: .85rem;
+    line-height: 1.4em;
+    font-size: .9rem;
     opacity: .8;
     overflow: hidden;
+  }
+
+  figure.image {
+    display: table;
+    width: 1px;
+    padding-left: .5rem;
+
+    img, figcaption {
+      max-width: inherit;
+    }
+
+    figcaption {
+      margin: .75rem 0;
+      line-height: 1.4em;
+      font-family: sans-serif;
+      font-size: .9rem;
+      opacity: .8;
+      overflow: hidden;
+      display: table-row;
+    }
+
+     // Don't inherit figcaption width when image is responsive
+    .columns > &,
+    .columns > & img {
+      max-width: 100%;
+      width: auto;
+      display: block;
+    }
   }
 
   // image .highlight-caption
@@ -119,7 +148,6 @@
     bottom: 3%;
     margin-bottom: 0;
   }
-
 
   body .has-tip { font-weight: normal; line-height: 1em; background: rgba(0,0,0,.03); }
 
