--- a/css/ebi-css-build/_embl_selector.scss
+++ b/css/ebi-css-build/_embl_selector.scss
@@ -9,11 +9,11 @@
 
   .masthead-black-bar {
     // peeking animation for black bar
-    transition: border-width 0.5s ease-in-out;
+    transition: border-width 0.25s ease-in-out;
     border-top: 0 solid #EEE;
 
     &.peek {
-      border-top: 1rem solid #EEE;
+      border-top: 4px solid #EEE;
     }
 
     li.embl-selector {
@@ -59,34 +59,23 @@
       }
     }
 
-    .embl-selector.embl-ebi {
-      .button,
-      .button.hover,
-      .button:focus,
-      .button:hover {
-        background: no-repeat 4px 50% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
-        padding-left: 95px;
-        background-size: 100px;
-      }
-    }
-
     .embl-selector {
       .button,
       .button.hover,
       .button:focus,
       .button:hover {
-        background: no-repeat 100% 50% url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg);
+        background: no-repeat 100% 50% url("../images/logos/EMBL/EMBL-white.svg");
         padding-left: 2px;
         background-size: 62px;
         width: 63px;
-        // background: no-repeat 4px 50% url("https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-white.svg");
-        // padding-left: 58px;
-        // background-size: 72px;
         padding-right: 17px;
         line-height: 12px;
       }
       .button.hover,
-      .button:hover { background-color: transparent; }
+      .button:hover {
+        cursor: s-resize;
+        background-color: transparent;
+      }
       .button[aria-expanded="false"]::after {
         content: '';
         display: block;
@@ -99,16 +88,30 @@
         top: 18px;
         margin-left: 55px;
       }
-    }
-    .embl-selector.active {
-      background-color: #ddd;
-      padding-right: 1rem;
-      .button,
-      .button.hover,
-      .button:focus,
-      .button:hover {
-        background-image: url(https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-black.svg);
+
+      &.embl-ebi {
+        .button,
+        .button.hover,
+        .button:focus,
+        .button:hover {
+          background: no-repeat 4px 50% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
+          padding-left: 95px;
+          background-size: 100px;
+        }
       }
+
+      &.active {
+        background-color: #ddd;
+        padding-right: 1rem;
+        .button,
+        .button.hover,
+        .button:focus,
+        .button:hover {
+          cursor: n-resize;
+          background-image: url("../images/logos/EMBL/EMBL-black.svg");
+        }
+      }
+
     }
 
     // begin to hide bits of dropdown toggle as screen shrinks
